@@ -47,6 +47,9 @@ New Features
 * SOLR-5999: Add checkIntegrityAtMerge support to solrconfig.xml.
   (Varun Thacker via Ryan Ernst)
 
+* SOLR-6043: Add ability to set http headers in solr response
+  (Tomás Fernández Löbbe via Ryan Ernst)
+
 Bug Fixes
 ----------------------
 
@@ -78,7 +81,6 @@ Bug Fixes
 
 * SOLR-6039: fixed debug output when no results in response
   (Tomás Fernández Löbbe, hossman)
-
 
 Other Changes
 ---------------------
